--- a/notes/go/advance/chan/index.html
+++ b/notes/go/advance/chan/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html>
 <head>
-<title>Memory</title>
+<title>go mod</title>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="ie=edge">
@@ -12,14 +12,13 @@
 <link rel=stylesheet href="https://fonts.googleapis.com/css2?family=Muli:wght@300;400;500;600">
 <link rel=stylesheet href=/fontawesome/css/all.min.css>
 <link rel=icon type=image/png href=/images/favicon_hu8376fd15465fef26ffe66b6bcf0ca686_13669_42x0_resize_box_3.png>
-<meta property="og:title" content="Memory">
-<meta property="og:description" content="内存 一般来说内存占用大小有如下规律：VSS >= RSS >= PSS >= USS
- VSS - Virtual Set Size 虚拟耗用内存（包含共享库占用的内存） RSS - Resident Set Size 实际使用物理内存（包含共享库占用的内存） PSS - Proportional Set Size 实际使用的物理内存（比例分配共享库占用的内存） USS - Unique Set Size 进程独自占用的物理内存（不包含共享库占用的内存）    RSS / VSZ
- RSS是Resident Set Size（常驻内存大小）的缩写，用于表示进程使用了多少内存（RAM中的物理内存）， RSS不包含已经被换出的内存。RSS包含了它所链接的动态库并且被加载到物理内存中的内存。RSS还包含栈内存和堆内存。 VSZ是Virtual Memory Size（虚拟内存大小）的缩写。它包含了进程所能访问的所有内存，包含了被换出的内存， 被分配但是还没有被使用的内存，以及动态库中的内存。  假设进程A的二进制文件是500K，并且链接了一个2500K的动态库，堆和栈共使用了200K，其中100K在内存中（剩下的被换出或者不再被使用）， 一共加载了动态库中的1000K内容以及二进制文件中的400K内容至内存中，那么：
-RSS: 400K + 1000K + 100K = 1500K VSZ: 500K + 2500K + 200K = 3200K 由于部分内存是共享的，被多个进程使用，所以如果将所有进程的RSS值加起来可能会大于系统的内存总量。
-申请过的内存如果程序没有实际使用，则可能不显示在RSS里。比如说一个程序，预先申请了一大批内存， 过了一段时间才使用，你会发现RSS会增长而VSZ保持不变。">
+<meta property="og:title" content="go mod">
+<meta property="og:description" content="go chan close 在go的chan中，chan被关闭后，消费者会继续读取channel中的消息。直到消息被全部读取之后使用i, ok := <-ch得到的ok才会变为false
+下面是测试代码以及运行时控制台打印结果：
+func main() { ch := make(chan int, 3) go producer(ch) for { i, ok := <-ch fmt.Printf(&#34;consume msg: %d\tok: %v\n&#34;, i, ok) time.Sleep(time.Second * 3) } } func producer(ch chan int) { for i := 0; i < 10; i++ { ch <- i fmt.Printf(&#34;produce msg: %d\n&#34;, i) time.Sleep(time.Second) } close(ch) fmt.Println(&#34;chan closed&#34;) } 输出结果
+produce msg: 0 consume msg: 0	ok: true produce msg: 1 produce msg: 2 consume msg: 1	ok: true produce msg: 3 produce msg: 4 consume msg: 2	ok: true produce msg: 5 consume msg: 3	ok: true produce msg: 6 consume msg: 4	ok: true produce msg: 7 consume msg: 5	ok: true produce msg: 8 consume msg: 6	ok: true produce msg: 9 chan closed consume msg: 7	ok: true consume msg: 8	ok: true consume msg: 9	ok: true consume msg: 0	ok: false consume msg: 0	ok: false     ">
 <meta property="og:type" content="article">
-<meta property="og:url" content="https://ormissia.github.io/notes/linux/system/system/"><meta property="article:section" content="notes">
+<meta property="og:url" content="https://ormissia.github.io/notes/go/advance/chan/"><meta property="article:section" content="notes">
 <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/atom-one-dark.min.css>
 <link rel=stylesheet href=/css/layouts/notes.css>
 <link rel=stylesheet href=/css/navigators/sidebar.css>
@@ -56,8 +55,8 @@ Ormissia's Blog</a>
 <li id=list-heading><a href=/notes data-filter=all>笔记</a></li>
 <div class=subtree>
 <li>
-<i class="fas fa-plus-circle"></i><a href=/notes/go/>Go</a>
-<ul>
+<i class="fas fa-minus-circle"></i><a class=active href=/notes/go/>Go</a>
+<ul class=active>
 <li>
 <i class="fas fa-plus-circle"></i><a href=/notes/go/basic/>Basics</a>
 <ul>
@@ -65,10 +64,10 @@ Ormissia's Blog</a>
 </ul>
 </li>
 <li>
-<i class="fas fa-plus-circle"></i><a href=/notes/go/advance/>Advance</a>
-<ul>
+<i class="fas fa-minus-circle"></i><a class=active href=/notes/go/advance/>Advance</a>
+<ul class=active>
 <li><a href=/notes/go/advance/time/ title=time>time</a></li>
-<li><a href=/notes/go/advance/chan/ title="go mod">go mod</a></li>
+<li><a class=active href=/notes/go/advance/chan/ title="go mod">go mod</a></li>
 </ul>
 </li>
 <li>
@@ -135,8 +134,8 @@ Ormissia's Blog</a>
 </ul>
 </li>
 <li>
-<i class="fas fa-minus-circle"></i><a class=active href=/notes/linux/>Linux</a>
-<ul class=active>
+<i class="fas fa-plus-circle"></i><a href=/notes/linux/>Linux</a>
+<ul>
 <li>
 <i class="fas fa-plus-circle"></i><a href=/notes/linux/shell/>Shell</a>
 <ul>
@@ -147,9 +146,9 @@ Ormissia's Blog</a>
 </ul>
 </li>
 <li>
-<i class="fas fa-minus-circle"></i><a class=active href=/notes/linux/system/>System</a>
-<ul class=active>
-<li><a class=active href=/notes/linux/system/system/ title=Memory>Memory</a></li>
+<i class="fas fa-plus-circle"></i><a href=/notes/linux/system/>System</a>
+<ul>
+<li><a href=/notes/linux/system/system/ title=Memory>Memory</a></li>
 </ul>
 </li>
 </ul>
@@ -187,38 +186,57 @@ Ormissia's Blog</a>
 <div class="container-fluid note-card-holder" id=note-card-holder>
 <div class=note-card>
 <div class=item>
-<h5 class=note-title><span>内存</span></h5>
+<h5 class=note-title><span>go chan close</span></h5>
 <div class=card>
-<div class=card-body><p>一般来说内存占用大小有如下规律：VSS >= RSS >= PSS >= USS</p>
-<ul>
-<li>VSS - Virtual Set Size 虚拟耗用内存（包含共享库占用的内存）</li>
-<li>RSS - Resident Set Size 实际使用物理内存（包含共享库占用的内存）</li>
-<li>PSS - Proportional Set Size 实际使用的物理内存（比例分配共享库占用的内存）</li>
-<li>USS - Unique Set Size 进程独自占用的物理内存（不包含共享库占用的内存）</li>
-</ul>
-</div>
-</div>
-<div class=card>
-<div class=card-body><p>RSS / VSZ</p>
-<ul>
-<li>RSS是<code>Resident Set Size</code>（常驻内存大小）的缩写，用于表示进程使用了多少内存（RAM中的物理内存），
-RSS不包含已经被换出的内存。RSS包含了它所链接的动态库并且被加载到物理内存中的内存。RSS还包含栈内存和堆内存。</li>
-<li>VSZ是<code>Virtual Memory Size</code>（虚拟内存大小）的缩写。它包含了进程所能访问的所有内存，包含了被换出的内存，
-被分配但是还没有被使用的内存，以及动态库中的内存。</li>
-</ul>
-<p>假设进程A的二进制文件是500K，并且链接了一个2500K的动态库，堆和栈共使用了200K，其中100K在内存中（剩下的被换出或者不再被使用），
-一共加载了动态库中的1000K内容以及二进制文件中的400K内容至内存中，那么：</p>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell>RSS: 400K + 1000K + 100K <span style=color:#f92672>=</span> 1500K
-VSZ: 500K + 2500K + 200K <span style=color:#f92672>=</span> 3200K
-</code></pre></div><p>由于部分内存是共享的，被多个进程使用，所以如果将所有进程的RSS值加起来可能会大于系统的内存总量。</p>
-<p>申请过的内存如果程序没有实际使用，则可能不显示在RSS里。比如说一个程序，预先申请了一大批内存，
-过了一段时间才使用，你会发现RSS会增长而VSZ保持不变。</p>
-<p>还有一个概念是PSS，它是<code>proportional set size</code>（proportional是成比例的意思）的缩写。
-这是一种新的度量方式。它将动态库所使用的内存按比例划分。比如我们前面例子中的动态库如果是被两个进程使用，那么：</p>
-<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell>PSS: 400K + <span style=color:#f92672>(</span>1000K/2<span style=color:#f92672>)</span> + 100K <span style=color:#f92672>=</span> 400K + 500K + 100K <span style=color:#f92672>=</span> 1000K
-</code></pre></div><p>一个进程中的多个线程共享同样的地址空间。所以一个进程中的多个线程的RSS，VSZ，PSS是完全相同的。linux下可以使用ps或者top命令查看这些信息。</p>
-<p><a href=https://stackoverflow.com/a/21049737>英文原文</a></p>
-</div>
+<div class=card-body><p>在<code>go</code>的<code>chan</code>中，<code>chan</code>被关闭后，消费者会继续读取<code>channel</code>中的消息。直到消息被全部读取之后使用<code>i, ok := &lt;-ch</code>得到的<code>ok</code>才会变为false</p>
+<p>下面是测试代码以及运行时控制台打印结果：</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#66d9ef>func</span> <span style=color:#a6e22e>main</span>() {
+	<span style=color:#a6e22e>ch</span> <span style=color:#f92672>:=</span> make(<span style=color:#66d9ef>chan</span> <span style=color:#66d9ef>int</span>, <span style=color:#ae81ff>3</span>)
+
+	<span style=color:#66d9ef>go</span> <span style=color:#a6e22e>producer</span>(<span style=color:#a6e22e>ch</span>)
+
+	<span style=color:#66d9ef>for</span> {
+		<span style=color:#a6e22e>i</span>, <span style=color:#a6e22e>ok</span> <span style=color:#f92672>:=</span> <span style=color:#f92672>&lt;-</span><span style=color:#a6e22e>ch</span>
+		<span style=color:#a6e22e>fmt</span>.<span style=color:#a6e22e>Printf</span>(<span style=color:#e6db74>&#34;consume msg: %d\tok: %v\n&#34;</span>, <span style=color:#a6e22e>i</span>, <span style=color:#a6e22e>ok</span>)
+		<span style=color:#a6e22e>time</span>.<span style=color:#a6e22e>Sleep</span>(<span style=color:#a6e22e>time</span>.<span style=color:#a6e22e>Second</span> <span style=color:#f92672>*</span> <span style=color:#ae81ff>3</span>)
+	}
+
+}
+
+<span style=color:#66d9ef>func</span> <span style=color:#a6e22e>producer</span>(<span style=color:#a6e22e>ch</span> <span style=color:#66d9ef>chan</span> <span style=color:#66d9ef>int</span>) {
+	<span style=color:#66d9ef>for</span> <span style=color:#a6e22e>i</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0</span>; <span style=color:#a6e22e>i</span> &lt; <span style=color:#ae81ff>10</span>; <span style=color:#a6e22e>i</span><span style=color:#f92672>++</span> {
+		<span style=color:#a6e22e>ch</span> <span style=color:#f92672>&lt;-</span> <span style=color:#a6e22e>i</span>
+		<span style=color:#a6e22e>fmt</span>.<span style=color:#a6e22e>Printf</span>(<span style=color:#e6db74>&#34;produce msg: %d\n&#34;</span>, <span style=color:#a6e22e>i</span>)
+		<span style=color:#a6e22e>time</span>.<span style=color:#a6e22e>Sleep</span>(<span style=color:#a6e22e>time</span>.<span style=color:#a6e22e>Second</span>)
+	}
+	close(<span style=color:#a6e22e>ch</span>)
+	<span style=color:#a6e22e>fmt</span>.<span style=color:#a6e22e>Println</span>(<span style=color:#e6db74>&#34;chan closed&#34;</span>)
+}
+</code></pre></div><p>输出结果</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell>produce msg: <span style=color:#ae81ff>0</span>
+consume msg: 0	ok: true
+produce msg: <span style=color:#ae81ff>1</span>
+produce msg: <span style=color:#ae81ff>2</span>
+consume msg: 1	ok: true
+produce msg: <span style=color:#ae81ff>3</span>
+produce msg: <span style=color:#ae81ff>4</span>
+consume msg: 2	ok: true
+produce msg: <span style=color:#ae81ff>5</span>
+consume msg: 3	ok: true
+produce msg: <span style=color:#ae81ff>6</span>
+consume msg: 4	ok: true
+produce msg: <span style=color:#ae81ff>7</span>
+consume msg: 5	ok: true
+produce msg: <span style=color:#ae81ff>8</span>
+consume msg: 6	ok: true
+produce msg: <span style=color:#ae81ff>9</span>
+chan closed
+consume msg: 7	ok: true
+consume msg: 8	ok: true
+consume msg: 9	ok: true
+consume msg: 0	ok: false
+consume msg: 0	ok: false
+</code></pre></div></div>
 </div>
 </div>
 </div>
