--- a/notes/go/advance/index.html
+++ b/notes/go/advance/index.html
@@ -64,7 +64,7 @@ Ormissia's Blog</a>
 <i class="fas fa-minus-circle"></i><a class=active href=/notes/go/advance/>Advance</a>
 <ul class=active>
 <li><a href=/notes/go/advance/time/ title=time>time</a></li>
-<li><a href=/notes/go/advance/gomod/ title="go mod">go mod</a></li>
+<li><a href=/notes/go/advance/chan/ title="go mod">go mod</a></li>
 </ul>
 </li>
 <li>
@@ -296,6 +296,62 @@ Ormissia's Blog</a>
 
 	<span style=color:#a6e22e>sumD</span> <span style=color:#f92672>:=</span> <span style=color:#a6e22e>now</span>.<span style=color:#a6e22e>Sub</span>(<span style=color:#a6e22e>d1</span>)
 	<span style=color:#a6e22e>fmt</span>.<span style=color:#a6e22e>Printf</span>(<span style=color:#e6db74>&#34;%v 天\n&#34;</span>, <span style=color:#a6e22e>sumD</span>.<span style=color:#a6e22e>Hours</span>()<span style=color:#f92672>/</span><span style=color:#ae81ff>24</span>)
+</code></pre></div></div>
+</div>
+</div>
+</div>
+<div class=note-card>
+<div class=item>
+<h5 class=note-title><span>go chan close</span></h5>
+<div class=card>
+<div class=card-body><p>在<code>go</code>的<code>chan</code>中，<code>chan</code>被关闭后，消费者会继续读取<code>channel</code>中的消息。直到消息被全部读取之后使用<code>i, ok := &lt;-ch</code>得到的<code>ok</code>才会变为false</p>
+<p>下面是测试代码以及运行时控制台打印结果：</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-go data-lang=go><span style=color:#66d9ef>func</span> <span style=color:#a6e22e>main</span>() {
+	<span style=color:#a6e22e>ch</span> <span style=color:#f92672>:=</span> make(<span style=color:#66d9ef>chan</span> <span style=color:#66d9ef>int</span>, <span style=color:#ae81ff>3</span>)
+
+	<span style=color:#66d9ef>go</span> <span style=color:#a6e22e>producer</span>(<span style=color:#a6e22e>ch</span>)
+
+	<span style=color:#66d9ef>for</span> {
+		<span style=color:#a6e22e>i</span>, <span style=color:#a6e22e>ok</span> <span style=color:#f92672>:=</span> <span style=color:#f92672>&lt;-</span><span style=color:#a6e22e>ch</span>
+		<span style=color:#a6e22e>fmt</span>.<span style=color:#a6e22e>Printf</span>(<span style=color:#e6db74>&#34;consume msg: %d\tok: %v\n&#34;</span>, <span style=color:#a6e22e>i</span>, <span style=color:#a6e22e>ok</span>)
+		<span style=color:#a6e22e>time</span>.<span style=color:#a6e22e>Sleep</span>(<span style=color:#a6e22e>time</span>.<span style=color:#a6e22e>Second</span> <span style=color:#f92672>*</span> <span style=color:#ae81ff>3</span>)
+	}
+
+}
+
+<span style=color:#66d9ef>func</span> <span style=color:#a6e22e>producer</span>(<span style=color:#a6e22e>ch</span> <span style=color:#66d9ef>chan</span> <span style=color:#66d9ef>int</span>) {
+	<span style=color:#66d9ef>for</span> <span style=color:#a6e22e>i</span> <span style=color:#f92672>:=</span> <span style=color:#ae81ff>0</span>; <span style=color:#a6e22e>i</span> &lt; <span style=color:#ae81ff>10</span>; <span style=color:#a6e22e>i</span><span style=color:#f92672>++</span> {
+		<span style=color:#a6e22e>ch</span> <span style=color:#f92672>&lt;-</span> <span style=color:#a6e22e>i</span>
+		<span style=color:#a6e22e>fmt</span>.<span style=color:#a6e22e>Printf</span>(<span style=color:#e6db74>&#34;produce msg: %d\n&#34;</span>, <span style=color:#a6e22e>i</span>)
+		<span style=color:#a6e22e>time</span>.<span style=color:#a6e22e>Sleep</span>(<span style=color:#a6e22e>time</span>.<span style=color:#a6e22e>Second</span>)
+	}
+	close(<span style=color:#a6e22e>ch</span>)
+	<span style=color:#a6e22e>fmt</span>.<span style=color:#a6e22e>Println</span>(<span style=color:#e6db74>&#34;chan closed&#34;</span>)
+}
+</code></pre></div><p>输出结果</p>
+<div class=highlight><pre tabindex=0 style=color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4><code class=language-shell data-lang=shell>produce msg: <span style=color:#ae81ff>0</span>
+consume msg: 0	ok: true
+produce msg: <span style=color:#ae81ff>1</span>
+produce msg: <span style=color:#ae81ff>2</span>
+consume msg: 1	ok: true
+produce msg: <span style=color:#ae81ff>3</span>
+produce msg: <span style=color:#ae81ff>4</span>
+consume msg: 2	ok: true
+produce msg: <span style=color:#ae81ff>5</span>
+consume msg: 3	ok: true
+produce msg: <span style=color:#ae81ff>6</span>
+consume msg: 4	ok: true
+produce msg: <span style=color:#ae81ff>7</span>
+consume msg: 5	ok: true
+produce msg: <span style=color:#ae81ff>8</span>
+consume msg: 6	ok: true
+produce msg: <span style=color:#ae81ff>9</span>
+chan closed
+consume msg: 7	ok: true
+consume msg: 8	ok: true
+consume msg: 9	ok: true
+consume msg: 0	ok: false
+consume msg: 0	ok: false
 </code></pre></div></div>
 </div>
 </div>
