--- a/notes/go/advance/time/index.html
+++ b/notes/go/advance/time/index.html
@@ -71,7 +71,8 @@ Ormissia's Blog</a>
 <i class="fas fa-minus-circle"></i><a class=active href=/notes/go/advance/>Advance</a>
 <ul class=active>
 <li><a class=active href=/notes/go/advance/time/ title=time>time</a></li>
-<li><a href=/notes/go/advance/chan/ title="go mod">go mod</a></li>
+<li><a href=/notes/go/advance/gomod/ title="go mod">go mod</a></li>
+<li><a href=/notes/go/advance/chan/ title="go chan">go chan</a></li>
 </ul>
 </li>
 <li>
