--- a/notes/scala/basic/basic_type/index.html
+++ b/notes/scala/basic/basic_type/index.html
@@ -68,7 +68,8 @@ Ormissia's Blog</a>
 <i class="fas fa-plus-circle"></i><a href=/notes/go/advance/>Advance</a>
 <ul>
 <li><a href=/notes/go/advance/time/ title=time>time</a></li>
-<li><a href=/notes/go/advance/chan/ title="go mod">go mod</a></li>
+<li><a href=/notes/go/advance/gomod/ title="go mod">go mod</a></li>
+<li><a href=/notes/go/advance/chan/ title="go chan">go chan</a></li>
 </ul>
 </li>
 <li>
