deploy: 06a42af5fbd987411e6e726df3ff56b29468e2c7

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Ormissia's Blog</a>
 <button class="navbar-toggler navbar-dark" id=navbar-toggler type=button data-toggle=collapse data-target=#top-nav-items aria-label=menu>
 <span class=navbar-toggler-icon></span>
 </button>
-<div class="collapse navbar-collapse" id=top-nav-items>
+<div class="collapse navbar-collapse dynamic-navbar" id=top-nav-items>
 <ul class="navbar-nav ml-auto">
 <li class=nav-item>
 <a class=nav-link href=#home>主页</a>
