deploy: 2f30303b7fe99f9935f11be1eba06d308917d84c

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <link rel=stylesheet href=/css/sections/recent-posts.css>
 <link rel=stylesheet href=/css/sections/achievements.css>
 <link rel=stylesheet href=/css/sections/accomplishments.css>
+<link rel=stylesheet href=/css/sections/publications.css>
 <link rel=stylesheet href=/css/style.css>
 </head>
 <body data-spy=scroll data-target=#top-navbar data-offset=100>
@@ -975,16 +976,16 @@ func BenchmarkSync(b *testing.B) { for i := 0; i &lt; b.</p>
 <span id=projects></span>项目</h1>
 <div class="container ml-auto text-center">
 <div class="btn-group flex-wrap" role=group id=project-filter-buttons>
-<button type=button class="btn btn-dark" data-filter=all>
+<button type=button class="btn btn-dark project-filtr-control" data-filter=all>
 All
 </button>
-<button type=button class="btn btn-dark" data-filter=professional>
+<button type=button class="btn btn-dark project-filtr-control" data-filter=professional>
 Professional
 </button>
-<button type=button class="btn btn-dark" data-filter=hobby>
+<button type=button class="btn btn-dark project-filtr-control" data-filter=hobby>
 Hobby
 </button>
-<button type=button class="btn btn-dark" data-filter=notSerious>
+<button type=button class="btn btn-dark project-filtr-control" data-filter=notSerious>
 NotSerious
 </button>
 </div>
