--- a/index.html
+++ b/index.html
@@ -119,14 +119,10 @@ Ormissia's Blog</a>
 <div class="col-sm-6 pt-5 pl-md-4 pl-sm-3 pt-sm-0">
 <div class=row>
 <div class="col-6 col-lg-4 p-2">
-<div class="circular-progress sky">
-<span class=circular-progress-left>
-<span class="circular-progress-bar circular-progress-percentage-95"></span>
-</span>
-<span class=circular-progress-right>
-<span class=circular-progress-bar></span>
-</span>
-<div class=circular-progress-value>Learing</div>
+<div>
+<a href=https://certified.elastic.co/045c46df-cb73-46e4-b320-28321390daa7 target=_blank rel="noopener noreferrer">
+<img src=https://api.accredible.com/v1/frontend/credential_website_embed_image/badge/55904255 alt="Elastic Certified Engineer">
+</a>
 </div>
 </div>
 <div class="col-6 col-lg-4 p-2">
