deploy: 6cf9f46cda8fc5f755f6693eaa46ec1e71ea513d

--- a/index.html
+++ b/index.html
@@ -201,6 +201,19 @@ Ormissia's Blog</a>
 <a class=skill-card-link>
 <div class=card>
 <div class="card-head d-flex">
+<img class=card-img-xs src=/images/sections/skills/elastic.svg alt=Elastic>
+<h5 class=card-title>Elastic</h5>
+</div>
+<div class=card-body>
+<p class=card-text>通过Elastic认证，熟悉ES常见聚合查询以及搜索推荐。了解常见的分词器，Lucene倒排索引机制以及使用的相关算法。</p>
+</div>
+</div>
+</a>
+</div>
+<div class="col-xs-12 col-sm-6 col-lg-4 pt-2">
+<a class=skill-card-link>
+<div class=card>
+<div class="card-head d-flex">
 <img class=card-img-xs src=/images/sections/skills/mysql.svg alt=MySQL>
 <h5 class=card-title>MySQL</h5>
 </div>
@@ -232,19 +245,6 @@ Ormissia's Blog</a>
 </div>
 <div class=card-body>
 <p class=card-text>熟练使用Redis&mldr;(施工中)</p>
-</div>
-</div>
-</a>
-</div>
-<div class="col-xs-12 col-sm-6 col-lg-4 pt-2">
-<a class=skill-card-link>
-<div class=card>
-<div class="card-head d-flex">
-<img class=card-img-xs src=/images/sections/skills/elastic.svg alt=Elastic>
-<h5 class=card-title>Elastic</h5>
-</div>
-<div class=card-body>
-<p class=card-text>熟悉ES常见查询以及搜索推荐、数据建模等。了解常见的分词器，Lucene倒排索引机制以及使用的相关算法。</p>
 </div>
 </div>
 </a>
