deploy: cb0eefaca8d47d69369e7ab3c9a6a00f89a0f28a

--- a/index.html
+++ b/index.html
@@ -1237,15 +1237,15 @@ professional
 </div>
 </div>
 <div class=d-none id=achievements-holder>
-<div class="achievement-entry text-center" style=background-image:url(/images/sections/achievements/ece_hub49030125a61105f65856d2a1e39b4a7_79046_0x300_resize_box_3.png)>
+<div class="achievement-entry text-center" style=background-image:url(/images/sections/achievements/ece_hub3ef6fd78be6737d479ae0143572d790_484970_0x300_resize_q75_box.jpg)>
 <i class="fas fa-search-plus" id=enlarge-icon></i>
 <h4 class=title id=achievement-title>Elastic Certified Engineer</h4>
 <div class="caption hidden col-lg-6 text-left" id=caption>
 <h4>Elastic Certified Engineer</h4>
 <p>2022-08-01获得Elastic认证工程师资格</p>
 </div>
-<span style=background-image:url(/images/sections/achievements/ece_hub49030125a61105f65856d2a1e39b4a7_79046_0x300_resize_box_3.png) class=d-none id=SmallImage active=true></span>
-<span style=background-image:url(/images/sections/achievements/ece_hub49030125a61105f65856d2a1e39b4a7_79046_0x1500_resize_box_3.png) class=d-none id=LargeImage></span>
+<span style=background-image:url(/images/sections/achievements/ece_hub3ef6fd78be6737d479ae0143572d790_484970_0x300_resize_q75_box.jpg) class=d-none id=SmallImage active=true></span>
+<span style=background-image:url(/images/sections/achievements/ece_hub3ef6fd78be6737d479ae0143572d790_484970_0x1500_resize_q75_box.jpg) class=d-none id=LargeImage></span>
 </div>
 </div>
 </div>
