deploy: bfa68ae675eb12a7f6394cd41d879eac83e43994

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ Ormissia's Blog</a>
 <li>I love servers</li>
 <li>I love to work with some fun projects</li>
 </ul>
-<a href=#about aria-label="阅读 更多的 - Ormissia"><i class="arrow bounce fa fa-chevron-down"></i></a>
+<a href=#about class=arrow-center aria-label="阅读 更多的 - Ormissia"><i class="arrow bounce fa fa-chevron-down"></i></a>
 </div>
 </div>
 <div class="container-fluid section-holder d-flex bg-white">
